[gd_scene load_steps=5 format=3 uid="uid://4okc6nq0xu53"]

[ext_resource type="Texture2D" uid="uid://bmubq2lq1n7of" path="res://assets/enemy_demo.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://jka0jag6m1o" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://m82sabxe7dku" path="res://assets/exclamation.png" id="3_4ra3w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
radius = 12.0
height = 96.0

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_md0e3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_7p1mj")

[node name="bullet_pos" type="Marker2D" parent="Sprite2D"]
position = Vector2(7.75, -0.5)
scale = Vector2(0.25, 0.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 0)
shape = SubResource("CapsuleShape2D_md0e3")

[node name="rc_bottom_right" type="RayCast2D" parent="."]
position = Vector2(9, 47)
target_position = Vector2(0, 11)
collision_mask = 2

[node name="rc_bottom_left" type="RayCast2D" parent="."]
position = Vector2(-26, 47)
target_position = Vector2(0, 11)
collision_mask = 2

[node name="eye_view_right" type="RayCast2D" parent="."]
position = Vector2(4, -7)
target_position = Vector2(30, 0)
collision_mask = 2

[node name="eye_view_left" type="RayCast2D" parent="."]
position = Vector2(-20, -7)
target_position = Vector2(-30, 0)
collision_mask = 2

[node name="shoot" type="RayCast2D" parent="."]
position = Vector2(0, -2)
target_position = Vector2(200, 0)

[node name="exclaim" type="Sprite2D" parent="."]
visible = false
position = Vector2(-43, -58)
texture = ExtResource("3_4ra3w")
